--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script id="luma-checkout" src="https://embed.lu.ma/checkout-button.js"></script>
   </body>
 </html>
